--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="asses/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
 
     <title>Proyecto info vis</title>
@@ -16,5 +17,16 @@
         <canvas id="myChart" width="800" height="400"></canvas>
     </div>
     <script src="asses/js/script.js"></script>
+</body>
+<body>
+    <div class="container">
+        <h1>Ubicación de los Equipos en USA</h1>
+        <div id="container">
+            <div id="mapa-contenedor"></div>
+            <div id="leyenda"></div>
+        </div>
+
+    </div>
+    <script src="asses/js/mapa.js"></script>
 </body>
 </html>
